notification mobile open fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3595,6 +3595,8 @@ tbody td {
 
   .topbar {
     z-index: 120;
+    backdrop-filter: none !important;
+    -webkit-backdrop-filter: none !important;
   }
 
   .sidebar {
